# meli_case_solution

./: .gitignore  README.md  pyproject.toml  requirements.txt
models/: df_metrics_results_tunning.pkl  df_metrics_results_tunning_reg.pkl
models/encoders/: bool_handler.pkl  conversor_float.pkl  encoder.pkl  fill_string_missing.pkl  seletor_1.pkl  seletor_2.pkl
models/encoders_reg/: bool_handler.pkl  encoder.pkl  features_fill_null.pkl  fill_string_missing.pkl  normalize_lower_string.pkl  seletor_1.pkl  seletor_2.pkl
models/predictors/: model_clf.pkl  model_reg.pkl
models/wrapped/: model_clf_pipeline_prod.pkl  model_reg_pipeline_prod.pkl
notebooks/: 0-Analise_ingestao.ipynb  00-Analise_ingestao.ipynb  02-basic_process.ipynb  03-build_features.ipynb  04-train_test_split.ipynb  07-Model_selection.ipynb  09-Model.ipynb  1-EDA.ipynb  10-Resultados.ipynb  Untitled-1.ipynb
reports/logs/: log_build_features.txt  log_download_raw_data.txt
reports/logs/Clf/: 04-log_train_test_split.txt  05-log_feature_selection_clf.txt  06-log_create_encoders.txt  07-log_model_selection.txt  08-log_tunning.txt  (+1 more)
src/config/: country_infos.yaml  feature_config.yaml
src/data/: basic_process.py  download_raw_data.py  train_test_split.py
src/features/: build_features.py  create_encoders.py  create_encoders_regression.py  feature_selection_clf.py  feature_selection_regression.py
src/models/: generate_artifacts.py  model_selection.py  model_selection_regression.py  tunning.py  tunning_reg.py
src/utils/: optuna_settings.py  training_utils.py  transformers.py
(+8 files in other folders)
